Fix bug where scrollbar pops up during message swipe-out and briefly squishes everything slightly to the left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,7 +333,7 @@ button:disabled:active {
         top: calc(30% - 10px);
     }
     100% {
-        top: 90%;
+        top: 100%;
     }
 }
 
